# flavor-project

./: .gitignore  README.md  build_database.py  clean_bible.py  clean_data.py  compute_similarities.py  construct_dataframes.py  construct_dataframes.py.old  create_nodes_and_edges.py  heatmap.py  main.py  parse.py  parse_html.py  pyproject.toml  requirements.txt  run-all.sh  run.sh  slice_network.py  visualize_graph.py  viz_heatmap.py
input/: basil-2.html  basil.html
src/: .food_genres.py.swp  data_tools.py  flavor_tools.py  food_genres.py  parse_brackets.py
src/pipeline/: clean.py  graph.py  parse.py  similarity.py
src/utils/: brackets.py  genres.py
tools/: heatmap.py  jaccard_probability_measure.py  slice.py  slice_network.py  visualize.py  visualize_graph.py
