[project]
name = "flavor-project"
version = "1.2"
description = "Tools for extracting flavor affinities from culinary texts"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Wyatt Brege" }
]
dependencies = [
    "beautifulsoup4==4.14.2",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "docopt==0.6.2",
    "fonttools==4.60.1",
    "fuzzywuzzy==0.18.0",
    "joblib==1.5.2",
    "kiwisolver==1.4.9",
    "matplotlib==3.10.6",
    "networkx==3.3",
    "numpy==2.3.4",
    "packaging==25.0",
    "pandas==2.3.3",
    "pillow==12.0.0",
    "pyparsing==3.2.5",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "rapidfuzz==3.12.2",
    "requests==2.32.3",
    "scikit-learn==1.7.2",
    "scipy==1.16.2",
    "six==1.17.0",
    "soupsieve==2.8",
    "threadpoolctl==3.6.0",
    "typing-extensions==4.15.0",
    "tzdata==2025.2",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]

[tool.ruff.format]
quote-style = "double"
